# 8QueensPuzzle

./: CMakeLists.txt  Puzzle.cpp  Puzzle.hpp  Queen.cpp  Queen.hpp  README.md  chessboard.cpp  chessboard.hpp  main  main.cpp  square.cpp  square.hpp
GUI/chessboard/chessboard/: chessboard-Info.plist  main.cpp
GUI/chessboard/chessboard.xcodeproj/: project.pbxproj
GUI/chessboard/chessboard.xcodeproj/project.xcworkspace/xcuserdata/mac.fede.xcuserdatad/: UserInterfaceState.xcuserstate
GUI/chessboard/chessboard.xcodeproj/xcshareddata/xcschemes/: chessboard.xcscheme
GUI/chessboard/chessboard.xcodeproj/xcuserdata/mac.fede.xcuserdatad/xcschemes/: xcschememanagement.plist
GUI/chessboard/chessboard/data/: main.cpp
GUI/chessboard/chessboard/data/inputValidator/: inputValidator.cpp  inputValidator.hpp
chessboard/: CMakeCache.txt  Makefile  QueensPuzzle  cmake_install.cmake  main.cpp
chessboard.xcodeproj/: project.pbxproj
chessboard.xcodeproj/project.xcworkspace/xcuserdata/mac.fede.xcuserdatad/: UserInterfaceState.xcuserstate
chessboard/algorithms/: Puzzle.cpp  Puzzle.hpp  Queen.cpp  Queen.hpp  chessboard.cpp  chessboard.hpp  square.cpp  square.hpp
